# Harness_hack06

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  readme_eval.md
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_scoring_config.py  f3b079cf1d75_initial_schema.py
backend/app/: config.py  main.py
backend/app/analyzers/: baseline_anomaly.py  ci_status.py  registry.py  review_quality.py  ticket_linkage.py
backend/app/api/: __init__.py  schemas.py
backend/app/domain/: models.py  scores.py  signals.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  prompts.py  registry.py  templated_fallback.py
backend/app/persistence/: orm.py  repository.py  schema.sql
backend/app/providers/: github.py  harness_scm.py  registry.py
backend/app/scoring/: __init__.py  baseline.py  engine.py  policies.py  similarity.py
backend/app/services/: analysis_service.py  backfill_service.py  scoring_config.py  similarity_service.py  slack_service.py  writeback_service.py
backend/harness/: README.md  build-deploy.pipeline.yaml  connector.github.yaml  deploy-pipeline.yaml  pipeline.yaml  secret.api-token.yaml  trigger.yaml
backend/k8s/: deployment.yaml  namespace.yaml  postgres.yaml  rbac.yaml  secret.example.yaml  service.yaml
backend/scripts/: backfill.py  capture_fixtures.py
backend/tests/: conftest.py
backend/tests/e2e/: test_e2e.py
backend/tests/unit/: _builders.py  test_ai_fix.py  (+20 more)
(+61 files in other folders)
