[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-health"
version = "0.1.0"
description = "PR Health Analytics — deterministic PR scoring with provider-agnostic SCM adapters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "anthropic>=0.40",
    "psycopg2-binary>=2.9",  # PostgreSQL driver (postgresql+psycopg2://)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "e2e: end-to-end tests that may hit the network (opt-in via RUN_E2E=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"